sign up form is not completed

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -7,7 +7,6 @@
   <body>
     <header class="layoutHeader">
       <div class="headerAndLogo"><h1 class="header">Sam Auto</h1></div>
-
       <nav class="navigationBar">
           <input type="checkbox" id="checkbox_toggle" />
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
@@ -22,7 +21,87 @@
       </nav>
     </header>
 
-    <div class="layoutMiddleLayerHomePage">
+      
+  <div 
+    class="layoutMiddleLayerSignUp">
+      <div class="headingHolder">
+        <h2>Sign Up</h2>
+      </div>
+      <div class="formHolder">
+        <div class="fields">
+          <div class="top">
+            <h2 class="firstName name">First Name:</h2>
+            <span class="error-message">Please enter first name</span>
+          </div>
+          <div class="inputBox">
+            <input
+              class="inputFirstName input"
+              type="text"
+              placeholder="Input your first name"
+            />
+            <img class="validator" />
+          </div>
+          <div class="top">
+            <h2 class="lastName name">Last Name:</h2>
+            <span class="error-message">Please enter last name</span>
+          </div>
+          <div class="inputBox">
+            <input
+              class="inputLastName input"
+              type="text"
+              placeholder="Input last name"
+            />
+            <img class="validator" />
+          </div>
+          <div class="top">
+            <h2 class="email name">Email:</h2>
+            <span class="error-message">Please enter valid email</span>
+          </div>
+          <div class="inputBox">
+            <input
+              class="inputEmail input"
+              type="text"
+              placeholder="Input email"
+            />
+            <img class="validator" />
+          </div>
+          <div class="top">
+            <h2 class="Phone name">Phone:</h2>
+            <span class="error-message"
+              >Please enter valid phone number</span
+            >
+          </div>
+          <div class="inputBox phone">
+            <select class="selectedCountryCode"></select>
+            <input
+              class="inputPhone"
+              type="number"
+              placeholder="Input Phone"
+            />
+            <img class="validator" />
+          </div>
+          <div class="top">
+            <h2 class="password name">Password:</h2>
+            <span class="error-message">Please enter valid password</span>
+          </div>
+          <div class="inputBox">
+            <input
+              class="inputPassword input"
+              type="password"
+              placeholder="Input password"
+            />
+            <img class="validator" />
+          </div>
+        </div>
+      </div>
+      <div class="image">
+        <img class = "imgShadow"src="images/SamAuto Logo.png">
+      </div>
+  </div> 
+
+  <!-- Home Page -->
+    <!-- <div 
+    class="layoutMiddleLayerHomePage">
       <div class="titleHolder">
         <h2>About us</h2>
       </div>
@@ -31,9 +110,9 @@
           Established in 2004 by Samuil Kozarov, Sam Auto is a renowned car dealership located in Sofia, Bulgaria. With over a decade of expertise, our dedicated team has garnered a loyal clientele, many of whom have evolved into valued customers. At Sam Auto, we specialize in high-end vehicle sales, offering a wide range of premium vehicles to meet the diverse needs of our customers. Our approach to business is characterized by professionalism, flexibility, and a commitment to customer satisfaction. We strive to make every transaction seamless and enjoyable, ensuring that each client receives personalized attention and expert guidance throughout the buying process. Trust Sam Auto for your next vehicle purchase and experience unparalleled service and quality.
       </div>
       <div class="imageHolder">
-        <img src="images/SamAuto Logo.png">
+        <img class = "imgShadow" src="images/SamAuto Logo.png">
       </div>
-    </div>
+    </div> -->
 
 
   <!-- CATALOGUE -->
