Sign up form is added

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -28,7 +28,6 @@
         <h2>Sign Up</h2>
       </div>
       <div class="formHolder">
-        <div class="fields">
           <div class="top">
             <h2 class="firstName name">First Name:</h2>
             <span class="error-message">Please enter first name</span>
@@ -71,7 +70,7 @@
               >Please enter valid phone number</span
             >
           </div>
-          <div class="inputBox phone">
+          <div class="inputBoxPhone">
             <select class="selectedCountryCode"></select>
             <input
               class="inputPhone"
@@ -92,8 +91,23 @@
             />
             <img class="validator" />
           </div>
-        </div>
+          <div class="top">
+            <h2 class="password name">Confirm Password:</h2>
+            <span class="error-message">Please enter valid password</span>
+          </div>
+          <div class="inputBox">
+            <input
+              class="inputPassword input"
+              type="password"
+              placeholder="Confirm password"
+            />
+            <img class="validator" />
+          </div>
+          <div class="buttonHolder">
+            <button class="submitBtn">Submit</button>
+          </div>
       </div>
+      
       <div class="image">
         <img class = "imgShadow"src="images/SamAuto Logo.png">
       </div>
