Page styles separation is added

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="CustomLayout.css" />
+    <link rel="stylesheet" href="CustomAboutUs.css"/>
+    <link rel="stylesheet" href="CustomCatalogue.css"/>
+    <link rel="stylesheet" href="CustomSignUp.css"/>
+
     <script type="module" src="main.js"></script>
   </head>
   <body>
@@ -21,7 +26,7 @@
       </nav>
     </header>
 
-      
+  <!-- Sign Up -->
   <div 
     class="layoutMiddleLayerSignUp">
       <div class="headingHolder">
@@ -111,7 +116,7 @@
       <div class="image">
         <img class = "imgShadow"src="images/SamAuto Logo.png">
       </div>
-  </div> 
+  </div>  
 
   <!-- Home Page -->
     <!-- <div 
