some more changes

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -121,7 +121,7 @@
 
 
 <!-- LogIn -->
-<form class="layoutMiddleLayerSignUp" asp-action="POST">
+<form class="layoutMiddleLayerLogIn" asp-action="POST">
   <div class="headingHolder">
       <h2>Sign Up</h2>
   </div>
@@ -151,6 +151,12 @@
        </ul>
       <div class="buttonHolder">
           <button class="submitBtn">Submit</button>
+      </div>
+      <div class="NotAMemberPanel">
+        <h5>Don't have an account?</h5>
+        <ul class="NavToSignUp">
+          <li><a asp-area="" asp-page="">Sign Up</a></li>
+         </ul>
       </div>
   </div>
 
