changes are made

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -28,7 +28,7 @@
     </header>
 
   <!-- Sign Up -->
-  <!-- <div 
+  <div> 
     class="layoutMiddleLayerSignUp">
       <div class="headingHolder">
         <h2>Sign Up</h2>
@@ -60,7 +60,7 @@
           </div>
           <div class="top">
             <h2 class="email name">Email:</h2>
-            <span class="error-message">Please enter valid email</span>
+            <span class="error-email hidden">Please enter valid email</span>
           </div>
           <div class="inputBox">
             <input
@@ -117,7 +117,7 @@
       <div class="image">
         <img class = "imgShadow"src="images/SamAuto Logo.png">
       </div>
-  </div>   -->
+  </div>  
 
 
 <!-- LogIn -->
