car boxes ready for large page

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -28,7 +28,7 @@
     </header>
 
   <!-- Sign Up -->
-  <div> 
+  <!-- <div> 
     class="layoutMiddleLayerSignUp">
       <div class="headingHolder">
         <h2>Sign Up</h2>
@@ -117,11 +117,11 @@
       <div class="image">
         <img class = "imgShadow"src="images/SamAuto Logo.png">
       </div>
-  </div>  
+  </div>   -->
 
 
 <!-- LogIn -->
-<form class="layoutMiddleLayerLogIn" asp-action="POST">
+<!-- <form class="layoutMiddleLayerLogIn" asp-action="POST">
   <div class="headingHolder">
       <h2>Sign Up</h2>
   </div>
@@ -163,7 +163,7 @@
   <div class="image">
       <img class="imgShadow" src="~/images/SamAutoLogo.png">
   </div>
-</form>
+</form> -->
 
   <!-- Home Page -->
     <!-- <div 
@@ -182,20 +182,49 @@
 
 
   <!-- CATALOGUE -->
-    <!-- <div class="layoutMiddleLayerAllVehicles">
+    <div class="layoutMiddleLayerAllVehicles">
       
         <div class="orderBar">
           <button class="btnrecentlyAdded">Recently Added</button>
           <button class="btnTopRated">Top Rated Vehicles</button>
         </div>
         <div class="contentHolder">
-          <div class="car"></div>
+          <div class="car">
+            <div class="topLayer">
+              <h4 class="releaseDate">22.02.2024</h4>
+              <button class="bookmarkHeart">HeartHere</button>
+            </div>
+            <div class="leftLayer">
+              <img class="carImage" src="./images/1.jpeg">
+            </div>
+            <div class="rightLayer">
+              <div class="header">
+                <h3 class="brandModel">BMW Series 5M</h3>
+                <h3 class="price">22 000€</h3>
+              </div>
+              <div class="characteristicsCategory">
+                <div><h4>Type</h4></div>
+                <div><h4>Year of prodution</h4></div>
+                <div><h4>Rating</h4></div>
+                <div><h4>Color</h4></div>
+              </div>
+              <div class="characteristicsVehicle">
+                <div><h4>Sedan</h4></div>
+                <div><h4>2019</h4></div>
+                <div><h4>⭐️ 7.5/10</h4></div>
+                <div><h4>Blue</h4></div>
+              </div>
+              <div class="carFooter">
+                <a href="">Show more</a>
+              </div>
+            </div>
+          </div>
           <div class="car"></div>
           <div class="car"></div>
           <div class="car"></div>
           <div class="car"></div>
         </div>
-    </div> -->
+    </div>
 
     </div>
     <footer class="footer">
