--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -3,10 +3,11 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="CustomLayout.css" />
-    <link rel="stylesheet" href="CustomAboutUs.css"/>
-    <link rel="stylesheet" href="CustomCatalogue.css"/>
-    <link rel="stylesheet" href="CustomSignUp.css"/>
-    <link rel="stylesheet" href="CustomLogIn.css"/>
+    <!-- <link rel="stylesheet" href="CustomAboutUs.css" />
+    <link rel="stylesheet" href="CustomCatalogue.css" />
+    <link rel="stylesheet" href="CustomSignUp.css" />
+    <link rel="stylesheet" href="CustomLogIn.css" /> -->
+    <link rel="stylesheet" href="CustomVehilePreview.css" />
 
     <script type="module" src="main.js"></script>
   </head>
@@ -14,21 +15,84 @@
     <header class="layoutHeader">
       <div class="headerAndLogo"><h1 class="header">Sam Auto</h1></div>
       <nav class="navigationBar">
-          <input type="checkbox" id="checkbox_toggle" />
-          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+        <input type="checkbox" id="checkbox_toggle" />
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
-          <ul class="menu">
-            <li><a href="/">All Vehicles</a></li>
-            <li><a href="/">Search</a></li>
-            <li><a href="/">My Garage</a></li>
-            <li><a href="/">My Profile</a></li>
-            <li><a href="/">Contact</a></li>
-          </ul>
+        <ul class="menu">
+          <li><a href="/">All Vehicles</a></li>
+          <li><a href="/">Search</a></li>
+          <li><a href="/">My Garage</a></li>
+          <li><a href="/">My Profile</a></li>
+          <li><a href="/">Contact</a></li>
+        </ul>
       </nav>
     </header>
+    <!-- Vehicle Preiew-->
+    <!-- <div class="layoutMiddleLayerHomePage">
+      <div class="titleHolder">
+        <h2>Toyota Camry</h2>
+      </div>
+      <div class="textHolder"></div>
+      <div class="imageHolder">
+        <img class="imgShadow" src="images/1.jpeg" />
+      </div>
+    </div> -->
 
-  <!-- Sign Up -->
-  <!-- <div> 
+    <div class="layoutMiddleLayerAllVehicles">
+      <div class="contentHolder">
+        <div class="car">
+          <div class="topLayer">
+            <h4 class="releaseDate">25-05-2024</h4>
+            <button class="bookmarkHeart">HeartHere</button>
+          </div>
+          <div class="leftLayer">
+            <img class="carImage" src="images/1.jpeg" />
+          </div>
+          <div class="rightLayer">
+            <div class="header">
+              <h3 class="brandModel">Toyota - Camry</h3>
+              <h3 class="price">1000€</h3>
+            </div>
+            <div class="characteristicsCategory">
+              <div><h4>Type</h4></div>
+              <div><h4>Date of prodution</h4></div>
+              <div><h4>Rating</h4></div>
+              <div><h4>Color</h4></div>
+              <div><h4>Engine</h4></div>
+              <div><h4>Engine Power</h4></div>
+              <div><h4>Fuel</h4></div>
+              <div><h4>Transmission</h4></div>
+              <div><h4>Mileage</h4></div>
+              <div><h4>Condition</h4></div>
+              <div><h4>Steering Wheel</h4></div>
+            </div>
+            <div class="characteristicsVehicle">
+              <div><h4>Combi</h4></div>
+              <div>
+                <h4>01.01.2024</h4>
+              </div>
+              <div><h4>⭐5/5</h4></div>
+              <div><h4>Grey</h4></div>
+              <div><h4>Electric</h4></div>
+              <div><h4>210hp</h4></div>
+              <div><h4>Battery</h4></div>
+              <div><h4>Automatic</h4></div>
+              <div><h4>5274km</h4></div>
+              <div><h4>Used</h4></div>
+              <div><h4>Left-hand</h4></div>
+            </div>
+            <div class="carFooter">
+              <button class="SaveForBuyingButton" href="">
+                Save For Buying
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Sign Up -->
+    <!-- <div> 
     class="layoutMiddleLayerSignUp">
       <div class="headingHolder">
         <h2>Sign Up</h2>
@@ -119,9 +183,8 @@
       </div>
   </div>   -->
 
-
-<!-- LogIn -->
-<!-- <form class="layoutMiddleLayerLogIn" asp-action="POST">
+    <!-- LogIn -->
+    <!-- <form class="layoutMiddleLayerLogIn" asp-action="POST">
   <div class="headingHolder">
       <h2>Sign Up</h2>
   </div>
@@ -165,7 +228,7 @@
   </div>
 </form> -->
 
-  <!-- Home Page -->
+    <!-- Home Page -->
     <!-- <div 
     class="layoutMiddleLayerHomePage">
       <div class="titleHolder">
@@ -180,9 +243,8 @@
       </div>
     </div> -->
 
-
-  <!-- CATALOGUE -->
-    <div class="layoutMiddleLayerAllVehicles">
+    <!-- CATALOGUE -->
+    <!-- <div class="layoutMiddleLayerAllVehicles">
       
         <div class="orderBar">
           <button class="btnrecentlyAdded">Recently Added</button>
@@ -224,11 +286,11 @@
           <div class="car"></div>
           <div class="car"></div>
         </div>
-    </div>
+    </div> -->
 
-    </div>
-    <footer class="footer">
+    <!-- </div> -->
+    <!-- <footer class="footer">
       <p>This is the footer of Sam Auto</p>
-    </footer>
+    </footer> -->
   </body>
 </html>
